# ICARION

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES_v1.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.1.1.md  d  fticr_debug.json  fticr_proper_timing.json  mkdocs.yml  requirements-analysis.txt  test_config_loader.cpp  test_molecule_load.cpp  test_ou_validation.json  test_phase5.json
src/: CMakeLists.txt
src/core/gpu/: FieldArrayGPU.cu  FieldArrayGPU_conversion.h  GPUCollisionHelper.cpp  GPUCollisionHelper.cu  GPUCollisionHelper.h  GPUCollisionHelper_host.cpp  GPUContext.cpp  GPUContext.h  GPUIntegrationHelper.cpp  GPUIntegrationHelper.h  GPUMemoryPool.h  GPUSpaceChargeP3M.cpp  GPUSpaceChargeP3M.cu  GPUSpaceChargeP3M.h  collision_hs_gpu.cuh  collision_kernels_gpu.cu  collision_kernels_gpu.cuh  computeAccelerationDevice.cuh  curand_wrapper.cuh  field_kernels_optimized.cuh  gpu_geometry.h  gpu_memory_pool.h  gpu_spatial_partitioning.h  integrate_boris_batch.cu  integrate_rk45_batch.cu  integrate_rk4_batch.cu  integrate_rk4_batch.cuh  integrate_rk4_kernel.cu  integrate_rk4_kernel.cuh  integrate_rk4_optimized.cu  integrate_rk4_optimized.cuh  multi_gpu_manager.cu  multi_gpu_manager.h
src/core/gpu_legacy/: async_transfer_manager.cpp  async_transfer_manager.h  collision_ehss_gpu.cuh  curand_wrapper.cu  gpu_memory_pool.cpp  gpu_spatial_partitioning.cu
src/core/integrator/: DeepCollisionDiagnosticsTracker.cpp  DeepCollisionDiagnosticsTracker.h  DomainContext.h  DomainManager.cpp  DomainManager.h  OutputManager.cpp  OutputManager.h  SimulationEngine.cpp  SimulationEngine.h  SimulationEngineCollisionRuntime.cpp  SimulationEngineGpu.cpp  SimulationEngineIntegration.cpp  SimulationEngineLifecycle.cpp  SimulationEngineUtils.cpp  SimulationEngineUtils.h  integrator.cpp  integrator.h  integrator_helpers.cpp  integrator_helpers.h  rk45_coefficients.h  rk45_settings.h
src/core/io/: ReproducibilityMetadata.cpp  ReproducibilityMetadata.h  UserAnnotation.cpp  UserAnnotation.h  configurationLoader.cpp  fieldArrayLoader.cpp  fieldArrayLoader.h  hdf5Utils.cpp  hdf5Utils.h  hdf5Writer.cpp  hdf5Writer.h  hdf5Writer_v2.cpp  hdf5Writer_v2.h  logger.cpp  logger.h  moleculeLoader.cpp  moleculeLoader.h  reactionLoader.cpp  reactionLoader.h  speciesLoader.cpp  speciesLoader.h
src/core/log/: Logger.cpp  Logger.h
src/core/param/: GPUParams.h  InstrumentEnums.h  TransferDomainData.h  paramUtils.cpp  paramUtils.h
src/core/physics/: computeAccelerations.cpp  computeAccelerations.h  geometryReader.h
src/core/types/: CollisionTypes.cpp  CollisionTypes.h  Grid3D.h  IonEnsemble.cpp  IonEnsemble.h  IonState.h  IonState_GPU.h  SimulationResult.h  Vec3.h
src/core/utils/: Profiler.cpp  Profiler.h  RngUtils.cpp  RngUtils.h  hash.h  mathUtils.cpp  mathUtils.h  simulationsUtils.cpp  simulationsUtils.h  startupBanner.h
src/fieldsolver/fmm/: gpu_fmm.cpp  gpu_fmm.h
src/fieldsolver/io/: SolverConfig.cpp  SolverConfig.h  fieldWriter.cpp  fieldWriter.h
src/fieldsolver/utils/: CompositeFieldProvider.h  Grid3D.h  GridFieldProvider.h  IFieldProvider.h  field_update_api.cpp  field_update_api.h
src/gpuUtils/: GpuIntegrator.cpp
src/instrument/: InstrumentTypes.cpp  InstrumentTypes.h
src/main/: main.cpp
src/main/setup/: PhysicsSetup.cpp  PhysicsSetup.h
src/optimizer/: SimulationContext.h
src/simulation/: SimulationEngine.cpp
src/utils/: IonState_GPU.cpp  IonState_GPU.h  cli_parser.cpp  cli_parser.h  constants.h  lj_params.h  vdw_radii.h
tests/: CMakeLists.txt  README.md
tests/config/: CMakeLists.txt  test_annotation_schema.py  test_config_loader.cpp  test_config_override.cpp  test_database_integration.cpp  test_field_array_e2e.cpp  test_field_array_terms_loader.cpp  test_ion_loader.cpp  test_legacy_adapter.cpp  test_reaction_loader_unit.cpp  test_reaction_validation.cpp  test_reaction_validation.json  test_species_loader.cpp  test_species_loader_unit.cpp  test_waveform_loader.cpp  test_waveform_types.cpp
tests/debug/: debug_hss_first_step.cpp  debug_orbitrap_engine.cpp  test_orbitrap_engine_bug.cpp
tests/gpu/: CMakeLists.txt  test_adaptive_interpolation.cpp  test_gpu_boundaries.cpp  test_gpu_damping.cpp  test_gpu_space_charge.cpp
tests/helpers/: physics_sim_utils.h
tests/instruments/: CMakeLists.txt  README.md  ims_physics_test.cpp  lqit_physics_test.cpp  orbitrap_physics_test.cpp  quadrupole_physics_test.cpp  test_domain_transition.cpp  test_fticr_cyclotron.cpp  test_ims_drift.cpp  test_instrument_basic.cpp  test_lqit_stability.cpp  test_orbitrap_frequency.cpp  test_quadrupole_filter.cpp  test_tof_flight_time.cpp
tests/integration/: CMakeLists.txt  test_annotation_cli.py  test_main_integration.cpp
tests/integrator/: CMakeLists.txt  test_boris_strategy.cpp  test_boundary_actions.cpp  test_cpu_gpu_parity.cpp  test_domain_geometry.cpp  test_domain_manager.cpp  test_engine_rng_compaction.cpp  test_gpu_boris.cpp  test_gpu_field_interpolation.cpp  test_gpu_field_interpolation.cpp.wip  test_gpu_integration.cpp  test_gpu_rk45.cpp  test_integration_batch_dt.cpp  test_output_manager.cpp  test_rk45_boris_parity.cpp  test_rk45_per_ion_dt.cpp  test_rk45_strategy.cpp  test_rk4_strategy.cpp  test_simulation_engine.cpp  test_simulation_engine_adaptive_sc.cpp  test_simulation_engine_per_ion_dt.cpp
tests/integrator/quarantined/: test_integration_batch_dt.cpp
tests/io/: CMakeLists.txt  test_hdf5_writer.cpp  test_hdf5_writer_v2.cpp
tests/physics/: CMakeLists.txt
tests/physics/collisions/: CMakeLists.txt  ipm_loader_probe.cpp  test_collision_diagnostics.cpp  test_collision_energy_conservation.cpp  test_collision_energy_diagnostic.cpp  test_collision_factory.cpp  test_collision_soa_parity.cpp  test_ehss_collision_handler.cpp  test_ehss_samples_loader.cpp  test_geometry_utils.cpp  (+16 more)
tests/unit/: CMakeLists.txt  benchmark_domain_lookup.cpp  benchmark_openmp_soa.cpp  benchmark_soa_performance.cpp  test_domain_manager_lookup.cpp  test_ion_ensemble.cpp  test_simulation_engine_soa.cpp
tests/utils/: CMakeLists.txt  test_hash.cpp  test_user_annotation.cpp
(+1698 files in other folders)
